--- a/FrontEnd/Registration page/index.html
+++ b/FrontEnd/Registration page/index.html
@@ -20,13 +20,7 @@
           <div class="input-box">
             <span class="icon"><ion-icon name="person"></ion-icon></span>
             <input type="text" required>
-            <label>Fullname</label>
-          </div>
-
-          <div class="input-box">
-            <span class="icon"><ion-icon name="person-circle"></ion-icon></span>
-            <input type="text" required>
-            <label>Username</label>
+            <label>Full Name</label>
           </div>
 
           <div class="input-box">
@@ -36,27 +30,28 @@
           </div>
 
           <div class="input-box">
-            <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-            <input type="password" required>
-            <label>Password</label>
+            <span class="icon"><ion-icon name="call"></ion-icon></span>
+            <input type="number" required>
+            <label>Phone Number</label>
           </div>
 
           <div class="input-box">
             <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
             <input type="password" required>
-            <label>Confirm Password</label>
+            <label>Password</label>
           </div>
 
           <!--<div class="remember-forget">
             <label><input type="checkbox">Remember me</label>
           </div>-->
 
-          <button type="submit">Sign up</button>
+          <button type="button" class="subBtn">Sign up</button>
           <div class="register-link">
             <p>
               Already have an account? <a href="#">Login</a>
             </p>
           </div>
+          <p class="errMsg"></p>
         </div>
       </form>
     </div>
@@ -64,5 +59,6 @@
 
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+  <script src="Registration.js"></script>
 
 </body>
