main page complete front end

--- a/FrontEnd/Main Page/index.html
+++ b/FrontEnd/Main Page/index.html
@@ -7,82 +7,41 @@
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap-icons.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css?8053">
 </head>
+<script src="./assets/js/fetch.js"></script>
 <body>
 
-	
-	<grammarly-extension data-grammarly-shadow-root="true" class="dnXmp class_1">
-	</grammarly-extension>
-	<grammarly-extension data-grammarly-shadow-root="true" class="dnXmp class_1">
-	</grammarly-extension>
-	<grammarly-extension data-grammarly-shadow-root="true" class="dnXmp class_1">
-	</grammarly-extension>
-	<grammarly-extension data-grammarly-shadow-root="true" class="dnXmp class_1">
-	</grammarly-extension>
-	<grammarly-extension data-grammarly-shadow-root="true" class="dnXmp class_1">
-	</grammarly-extension>
-	<grammarly-extension data-grammarly-shadow-root="true" class="dnXmp class_1">
-	</grammarly-extension>
-	<grammarly-extension data-grammarly-shadow-root="true" class="dnXmp class_1">
-	</grammarly-extension>
-	<grammarly-extension data-grammarly-shadow-root="true" class="dnXmp class_1">
-	</grammarly-extension>
-	<grammarly-extension data-grammarly-shadow-root="true" class="dnXmp class_1">
-	</grammarly-extension>
-	<grammarly-extension data-grammarly-shadow-root="true" class="dnXmp class_1">
-	</grammarly-extension>
-	<grammarly-extension data-grammarly-shadow-root="true" class="dnXmp class_1">
-	</grammarly-extension>
-	<grammarly-extension data-grammarly-shadow-root="true" class="dnXmp class_1">
-	</grammarly-extension>
-	<grammarly-extension data-grammarly-shadow-root="true" class="dnXmp class_1">
-	</grammarly-extension>
-	<grammarly-extension data-grammarly-shadow-root="true" class="dnXmp class_1">
-	</grammarly-extension>
-	<grammarly-extension data-grammarly-shadow-root="true" class="dnXmp class_1">
-	</grammarly-extension>
-	<grammarly-extension data-grammarly-shadow-root="true" class="dnXmp class_1">
-	</grammarly-extension>
-	<grammarly-extension data-grammarly-shadow-root="true" class="dnXmp class_1">
-	</grammarly-extension>
-	<grammarly-extension data-grammarly-shadow-root="true" class="dnXmp class_1">
-	</grammarly-extension>
-	<grammarly-extension data-grammarly-shadow-root="true" class="dnXmp class_1">
-	</grammarly-extension>
-	<grammarly-extension data-grammarly-shadow-root="true" class="dnXmp class_1">
-	</grammarly-extension>
-	<grammarly-extension data-grammarly-shadow-root="true" class="dnXmp class_1">
-	</grammarly-extension>
-	<grammarly-extension data-grammarly-shadow-root="true" class="dnXmp class_1">
-	</grammarly-extension>
-	<grammarly-extension data-grammarly-shadow-root="true" class="dnXmp class_1">
-	</grammarly-extension>
-	<grammarly-extension data-grammarly-shadow-root="true" class="dnXmp class_1">
-	</grammarly-extension>
-	<grammarly-extension data-grammarly-shadow-root="true" class="dnXmp class_1">
-	</grammarly-extension>
-	<grammarly-extension data-grammarly-shadow-root="true" class="dnXmp class_1">
-	</grammarly-extension>
-	<header class="class_2" >
-		<div class="class_3" >
-			<img src="assets/images/Red.jpg" class="class_4" >
+	<div class="class_46" >
+		<div class="class_47" >
+			<img src=".\assets\images\C.H.O.R.png" class="class_48" >
+			<div class="class_49" >
+				<a href="#"  class="class_50" style="text-decoration: underline;">
+					Home
+				</a>
+				<a href="#"  class="class_50" >
+					Map
+				</a>
+				<a href="#"  class="class_52" >
+					Crime Predictor
+				</a>
+				<a href="#"  class="class_53" >
+					Complaint Lodging
+				</a>
+				<a href="#"  class="class_50" >
+					Missing Person
+				</a>
+				<a href="#"  class="class_50" >
+					ChatBot
+				</a>
+			</div>
 		</div>
+	</div>
+	<header class="class_2" >
 		<div  class="item_class_0 class_5">
 			<div  class="item_class_1 class_6">
 				<svg clip-rule="evenodd" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" >
 					<path d="m22 16.75c0-.414-.336-.75-.75-.75h-18.5c-.414 0-.75.336-.75.75s.336.75.75.75h18.5c.414 0 .75-.336.75-.75zm0-5c0-.414-.336-.75-.75-.75h-18.5c-.414 0-.75.336-.75.75s.336.75.75.75h18.5c.414 0 .75-.336.75-.75zm0-5c0-.414-.336-.75-.75-.75h-18.5c-.414 0-.75.336-.75.75s.336.75.75.75h18.5c.414 0 .75-.336.75-.75z" fill-rule="nonzero" >
 					</path>
 				</svg>
-			</div>
-			<div  class="item_class_2 class_7">
-				<a href="#"  class="class_8" >
-					Home
-				</a>
-				<a href="#"  class="class_8" >
-					About us
-				</a>
-				<a href="#"  class="class_9" >
-					Contact us
-				</a>
 			</div>
 		</div>
 	</header>
@@ -103,11 +62,10 @@
 						Celebrating one year of groundbreaking solutions! C.H.O.R pioneers crime prevention through predictive analytics and a cutting-edge Crime Prediction System. Visualize potential threats with our Virtual Representation. Engage with our community-centric Missing Persons and Complaint Registries. Our AI Chatbot simplifies legal matters. Join us in shaping a safer, empowered future – where technology meets proactive solutions.
 					</div>
 				</h2>
-				<button class="class_15"  >
-					Features
-				</button>
+				
 			</div>
 			<div class="class_16" >
+				<img src=".\assets\images\C.H.O.R.png" alt="">
 			</div>
 		</div>
 	</div>
@@ -127,21 +85,21 @@
 			</grammarly-extension>
 			<div class="class_20" >
 			</div>
-			<img src="assets/images/beautiful-happy-african-american-woman-has-surprised-joyful-expression-cannot-believe-sudden-success-dressed-casual-white-jumper_273609-43273.jpg" class="class_21" >
+			<img src=".\assets\images\download.jpeg" class="class_21" >
 			<h1 class="class_22"  >
 				Crime Predictor
 			</h1>
 			<h4 class="class_23"   spellcheck="false">
 				<div class="class_24">
 					<div>
-						C.H.O.R's cutting-edge feature forecasts yearly crime statistics, guiding law enforcement in strategic planning and resource allocation. Stay ahead, act proactively, and contribute to building safer communities.
+						C.H.O.R's cutting-edge feature forecasts yearly crime statistics, guiding law enforcement in strategic planning and resource allocation. Using AI to ensure safety measures.
 						<br>
 					</div>
 				</div>
 			</h4>
 			<div class="class_25" >
 				<div class="class_26"  >
-					View Profile
+					<a href="#" style="color: black; text-decoration: none; font-weight: bold;">View</a>
 					<br >
 				</div>
 			</div>
@@ -149,20 +107,20 @@
 		<div  backup="" class="class_19 item_class_3">
 			<div class="class_20" >
 			</div>
-			<img src="assets/images/beautiful-sincere-happy-girl-smiling-laughing_176420-9693.jpg" class="class_21" >
+			<img src=".\assets\images\images.jpeg" class="class_21" >
 			<h1 class="class_22"  >
 				Maps
 				<br >
 			</h1>
 			<h4 class="class_23"  >
 				<div>
-					Unlock a new dimension with C.H.O.R's data visualization. We employ interactive techniques to craft engaging and informative visual representations of crime statistics. See the story behind the data, empowering better understanding and decision-making.
+					Unlock a new dimension with C.H.O.R's data visualization. We employ interactive techniques to craft engaging and informative visual representations of crime statistics.
 					<br>
 				</div>
 			</h4>
 			<div class="class_25" >
 				<div class="class_26"  >
-					View Profile
+					<a href="#" style="color: black; text-decoration: none;font-weight: bold;">View</a>
 					<br >
 				</div>
 			</div>
@@ -174,7 +132,7 @@
 			</grammarly-extension>
 			<div class="class_20" >
 			</div>
-			<img src="assets/images/close-up-shot-ordinary-fair-haired-caucasian-male-with-bristle-earrings-staring-carefree-being-indifferent-calm_176420-25002.jpg" class="class_21" >
+			<img src=".\assets\images\images1.png" class="class_21" >
 			<h1 class="class_22"  >
 				Chat-Bot
 				<br >
@@ -187,7 +145,7 @@
 			</h4>
 			<div class="class_25" >
 				<div class="class_26"  >
-					View Profile
+					<a href="#" style="color: black; text-decoration: none;font-weight: bold;">View</a>
 					<br >
 				</div>
 			</div>
@@ -195,7 +153,7 @@
 		<div  backup="" class="class_27 item_class_3">
 			<div class="class_20" >
 			</div>
-			<img src="assets/images/beautiful-happy-african-american-woman-has-surprised-joyful-expression-cannot-believe-sudden-success-dressed-casual-white-jumper_273609-43273.jpg" class="class_21" >
+			<img src=".\assets\images\Complaint.jpg" class="class_21" >
 			<h1 class="class_22"  >
 				Complaint Lodging
 			</h1>
@@ -207,7 +165,7 @@
 			</h4>
 			<div class="class_28" >
 				<div class="class_26"  >
-					View Profile
+					<a href="#" style="color: black; text-decoration: none;font-weight: bold;">View</a>
 					<br >
 				</div>
 			</div>
@@ -215,80 +173,75 @@
 		<div  backup="" class="class_19 item_class_3">
 			<div class="class_20" >
 			</div>
-			<img src="assets/images/candid-shot-serious-european-lady-makes-shush-gesture-keesp-index-finger-lips_273609-44692.jpg" class="class_21" >
+			<img src=".\assets\images\images (1).jpeg" class="class_21" >
 			<h1 class="class_22"  >
 				Missing Persons Registry
 			</h1>
 			<h4 class="class_23"  >
 				<div>
-					Our portal at C.H.O.R is a compassionate space, storing and displaying information about missing individuals. Accessible to the public, we prioritize privacy and adhere to legal requirements, fostering a community-driven approach to reuniting loved ones.
-					<br>
+					Our portal at C.H.O.R is a compassionate space, storing and displaying information about missing individuals. Accessible to the public, we prioritize privacy and adhere to legal requirements.
 				</div>
 			</h4>
 			<div class="class_25" >
 				<div class="class_26"  >
-					View Profile
+					 <a href="#" style="color: black; text-decoration: none;font-weight: bold;">View</a>
 					<br >
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="class_29" >
-		<div class="class_30" >
-			<div class="class_31" >
-				<h1 class="class_32"   spellcheck="false">
-					Get in touch with the right people at C.H.O.R, We are here to help!
+	<section class="class_70" >
+		<div class="class_71" >
+			<div class="class_72" >
+				<h1 class="class_73"   spellcheck="false">
+					<div>
+						Get in touch with the right people at C.H.O.R. We’re here to help!
+					</div>
 				</h1>
-				<div class="class_33"   spellcheck="false">
-					<font color="#000000" face="Times New Roman" size="3" class="class_34">
-						"We value your experience, and your feedback is important to us! Whether you've recently explored our website, utilized our features, or browsed through our content, we would love to hear your thoughts. Your input is instrumental in our ongoing efforts to improve and enhance your overall experience."
-					</font>
-					<br>
+				<div class="class_74"   spellcheck="false">
+					Your experience matters to us, and we would love to hear your thoughts! Whether you've just explored our website, used our features, or navigated our content, your feedback is incredibly valuable in helping us enhance your experience.
 				</div>
-				<button class="class_35"  >
-					Details
-				</button>
 			</div>
-			<div class="class_31" >
-				<form method="post" enctype="multipart/form-data" class="class_36" >
-					<h1 class="class_37"  >
+			<div class="class_72" >
+				<form method="post" enctype="multipart/form-data" class="class_75" >
+					<h1 class="class_76"  >
 						Contact us
 						<br >
 					</h1>
-					<div class="class_38" >
-						<label class="class_39"  >
+					<div class="class_77" >
+						<label class="class_78"  >
 							Name:
 						</label>
-						<input placeholder="Enter your Name" type="text" name="name" class="class_40" >
+						<input placeholder="Enter your Name" type="text" name="name" class="class_79" >
 					</div>
-					<div class="class_38" >
-						<label class="class_39"  >
+					<div class="class_77" >
+						<label class="class_78"  >
 							Email:
 						</label>
-						<input placeholder="Enter a valid Email" type="email" name="email" class="class_40" >
+						<input placeholder="Enter a valid Email" type="email" name="email" class="class_79" >
 					</div>
-					<div class="class_41" >
-						<label class="class_42"  >
+					<div class="class_80" >
+						<label class="class_81"  >
 							Message:
 						</label>
-						<textarea placeholder="Enter your Message" name="message" class="class_40" >
+						<textarea placeholder="Enter your Message" name="message" class="class_79" >
 						</textarea>
 					</div>
-					<div class="class_43" >
+					<div class="class_82" >
 						<label  >
 							<input type="checkbox" name="" >
 							I accept the terms of service
 						</label>
 					</div>
-					<button class="class_44"  >
+					<button class="class_83" type="button" onclick="successSubmit()">
 						SUBMIT
 					</button>
 				</form>
 			</div>
 		</div>
+		<div  class="class_84" >
+			@2023 All Rights Reserved C.H.O.R, Inc
+		</div>
 	</section>
-	<div class="class_45" >
-	</div>
-	
 </body>
 </html>
