--- a/FrontEnd/CrimePredictor/index.html
+++ b/FrontEnd/CrimePredictor/index.html
@@ -116,7 +116,7 @@
 							I accept the terms of service
 						</label>
 					</div>
-					<button class="class_38"  >
+					<button class="class_38" type="button" onclick="successSubmit()">
 						SUBMIT
 					</button>
 				</form>
