minor change in main page

--- a/FrontEnd/Main Page/index.html
+++ b/FrontEnd/Main Page/index.html
@@ -59,7 +59,7 @@
 						<br>
 					</div>
 					<div>
-						Celebrating one year of groundbreaking solutions! C.H.O.R pioneers crime prevention through predictive analytics and a cutting-edge Crime Prediction System. Visualize potential threats with our Virtual Representation. Engage with our community-centric Missing Persons and Complaint Registries. Our AI Chatbot simplifies legal matters. Join us in shaping a safer, empowered future – where technology meets proactive solutions.
+						Crime, Harassement and Offence Registry! C.H.O.R pioneers crime prevention through predictive analytics and a cutting-edge Crime Prediction System. Visualize potential threats with our Virtual Representation. Engage with our community-centric Missing Persons and Complaint Registries. Our AI Chatbot simplifies legal matters. Join us in shaping a safer, empowered future – where technology meets proactive solutions.
 					</div>
 				</h2>
 				
