--- a/FrontEnd/Main Page/index.html
+++ b/FrontEnd/Main Page/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Untitled</title>
+	<title>Main Page</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap-icons.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css?8053">
 </head>
