--- a/FrontEnd/Map Page/index.html
+++ b/FrontEnd/Map Page/index.html
@@ -6,8 +6,10 @@
 	<title>MAP</title>
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap-icons.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css?4818">
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+    <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 </head>
-<script src="./assets/js/map.js"></script>
+
 <body>
 	<div class="class_2" >
 		<div class="class_3" >
@@ -48,6 +50,9 @@
 			</div>
 			<img src="assets/images/setup-analytics-concept-illustration_114360-1429.webp" class="class_15" >
 		</div>
+	</section>
+	<section class="mapCont">
+		
 	</section>
 	<section class="class_16" >
 		<div class="class_17" >
@@ -104,4 +109,5 @@
 	</section>
 	
 </body>
+<script src="./assets/js/map.js"></script>
 </html>
