--- a/FrontEnd/Missing_Person_Portal/index.html
+++ b/FrontEnd/Missing_Person_Portal/index.html
@@ -54,153 +54,14 @@
 			</h1>
 			<div class="class_20" >
 				<input type="text" name="username" class="class_21" style="text-align:center" >
-				<button  class="class_22 bi bi-search">
+				<button class="class_22 bi bi-search" onclick="searchData()">
 				</button>
 			</div>
-			<div class="class_23" >
-				<div class="class_24" >
-					<img src="assets/images/surprised-happy-girl-pointing-left-recommend-product-advertisement-make-okay-gesture_176420-20191.jpg" class="class_25" >
-					<div class="class_26" >
-						<label class="class_27"  >
-							Name:
-						</label>
-						<input placeholder="" type="text" name="username" class="class_28" >
-					</div>
-					<div class="class_26" >
-						<label class="class_27"  >
-							Gender:
-						</label>
-						<input placeholder="" type="text" name="username" class="class_28" >
-					</div>
-					<div class="class_26" >
-						<label class="class_27"  >
-							Relative:
-						</label>
-						<input placeholder="" type="text" name="username" class="class_28" >
-					</div>
-					<div class="class_26" >
-						<label class="class_31"  >
-							Address:
-						</label>
-						<input placeholder="" type="text" name="username" class="class_28" >
-					</div>
-					<div class="class_26" >
-						<label class="class_27"  >
-							Age:
-						</label>
-						<input placeholder="" type="text" name="username" class="class_28" >
-					</div>
-					<div class="class_26" >
-						<label class="class_27"  >
-							Height:
-						</label>
-						<input placeholder="" type="text" name="username" class="class_28" >
-					</div>
-					<div class="class_26" >
-						<label class="class_27"  >
-							Built:
-						</label>
-						<input placeholder="" type="text" name="username" class="class_28" >
-					</div>
-					<div class="class_26" >
-						<label class="class_27"  >
-							District:
-						</label>
-						<input placeholder="" type="text" name="username" class="class_28" >
-					</div>
-					<div class="class_26" >
-						<label class="class_27"  >
-							State:
-						</label>
-						<input placeholder="" type="text" name="username" class="class_28" >
-					</div>
-				</div>
+			<div class="misCard_cont">
+				
 			</div>
-		</section>
-		<section class="class_32" >
-			<h1 class="class_18"  >
-				Missing Person Registry
-				<br >
-			</h1>
-			<div class="class_23" >
-				<div class="class_24" >
-					<img src="assets/images/surprised-happy-girl-pointing-left-recommend-product-advertisement-make-okay-gesture_176420-20191.jpg" class="class_25" >
-					<div class="class_26" >
-						<label class="class_33"  >
-							Name:
-						</label>
-						<div  class="class_34" >
-							Div with text
-						</div>
-					</div>
-					<div class="class_26" >
-						<label class="class_33"  >
-							Gender:
-						</label>
-						<div  class="class_34" >
-							Div with text
-						</div>
-					</div>
-					<div class="class_26" >
-						<label class="class_33"  >
-							Relative:
-						</label>
-						<div  class="class_34" >
-							Div with text
-						</div>
-					</div>
-					<div class="class_26" >
-						<label class="class_37"  >
-							Address:
-						</label>
-						<div  class="class_34" >
-							Div with text
-						</div>
-					</div>
-					<div class="class_26" >
-						<label class="class_33"  >
-							Age:
-						</label>
-						<div  class="class_34" >
-							Div with text
-						</div>
-					</div>
-					<div class="class_26" >
-						<label class="class_33"  >
-							Height:
-						</label>
-						<div  class="class_34" >
-							Div with text
-						</div>
-					</div>
-					<div class="class_26" >
-						<label class="class_33"  >
-							Built:
-						</label>
-						<div  class="class_34" >
-							Div with text
-						</div>
-					</div>
-					<div class="class_26" >
-						<label class="class_33"  >
-							District:
-						</label>
-						<div  class="class_34" >
-							Div with text
-						</div>
-					</div>
-					<div class="class_26" >
-						<label class="class_33"  >
-							State:
-						</label>
-						<div  class="class_34" >
-							Div with text
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-	</section>
+			</section>
+			
 	<section class="class_38" >
 		<div class="class_39" >
 			<div class="class_40" >
@@ -214,7 +75,7 @@
 				</div>
 			</div>
 			<div class="class_40" >
-				<form method="post" enctype="multipart/form-data" class="class_43" >
+				<form class="class_43" >
 					<h1 class="class_44"  >
 						Contact us
 						<br >
