--- a/FrontEnd/Login page/index.html
+++ b/FrontEnd/Login page/index.html
@@ -6,49 +6,65 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Login page</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  
 </head>
 
 <body>
-<section>
-  <!--For login of the user-->
-  <div class="loginbox">
-    <form action="">
 
-      <div class="info-text login">
+  <div class="split-screen">
+    <div class="left">
+      <section class="copy">
+        <h1>Welcome Back</h1>
+        <p>
+          "Welcome to our Crime, Harassment & Offence Registry – a dedicated platform committed to promoting safety, awareness, and justice by empowering individuals to report and document incidents of harassment, fostering a community united against crime."
+        </p>
+      </section>
+    </div>
+    <div class="right">
+      <form>
+        <section class="copy">
 
-        <h2>User Login</h2>
+          <div class="logo">
+            <img src="C.H.O.R.png" alt="Logo">
+          </div>
 
-        <div class="input-box">
-          <span class="icon"><ion-icon name="mail"></ion-icon></span>
-          <input class="inpBx" type="email" required>
-          <label>Email</label>
+          <h2>Log In</h2>
+          <div class="login-container">
+            <p>Don't have an account? <a href="#">
+              <strong>Sign Up</strong>
+            </a> </p>
+          </div>
+        </section>
+
+        <div class="input-container username">
+          <label for="username">Username</label>
+          <input id="username" name="username" type="username" placeholder="Enter your username">
         </div>
 
-        <div class="input-box">
-          <span class="icon"><ion-icon name="lock-closed"></ion-icon></span>
-          <input class="inpBx" type="password" required>
-          <label>Password</label>
+        <div class="input-container password">
+          <label for="password">Password</label>
+          <input id="password" name="password" type="password" placeholder="Enter your password">
+          <i class="far fa-eye-slash"></i>
         </div>
 
-        <div class="remember-forget">
-          <label><input type="checkbox">Remember me</label>
-          <a href="#">Forgot Password?</a>
-        </div>
+        
+          <!--<div class="input-container cta">
+            <label class="checkbox-container">
+              <input type="checkbox">
+              <span class="checkmark"></span>
+              Sign up for email updates.
+            </label>
+          </div>-->
+          <button class="login-btn" type="submit">Log In</button>
+        <section class="copy legal">
+          <p><span class="small">By continuing, you agree to accept our <br> Privacy Policy &amp; Terms of Service.</span></p>
+        </section>
 
-        <button class="subBtn" type="button">Login</button>
-        <div class="register-link">
-          <p>
-            Don't have an account? <a href="#">Sign up</a>
-          </p>
-        </div>
-        <p class="errMsg"></p>
-      </div>
-
-
-    </form>
+      </form>
+    </div>
   </div>
 
-</section>
 
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
