--- a/FrontEnd/CrimePredictor/index.html
+++ b/FrontEnd/CrimePredictor/index.html
@@ -16,22 +16,22 @@
 		<div class="class_3" >
 			<img src="assets/images/C.H.O.R.png" class="class_4" >
 			<div class="class_5" >
-				<a href="#"  class="class_6" >
+				<a href="../Main Page/index.html"  class="class_6" >
 					Home
 				</a>
-				<a href="#"  class="class_6" >
+				<a href="../Map Page/index.html"  class="class_6" >
 					Map
 				</a>
-				<a href="#"  class="class_8" >
+				<a href="index.html"  class="class_8" >
 					Crime Predictor
 				</a>
-				<a href="#"  class="class_9" >
+				<a href="../Complaint_Lodging/index.html"  class="class_9" >
 					Complaint Lodging
 				</a>
-				<a href="#"  class="class_6" >
+				<a href="../Missing_Person_Portal/index.html"  class="class_6" >
 					Missing Person
 				</a>
-				<a href="#"  class="class_6" >
+				<a href="../CHATBOT Page/index.html"  class="class_6" >
 					ChatBot
 				</a>
 			</div>
