--- a/FrontEnd/Main Page/index.html
+++ b/FrontEnd/Main Page/index.html
@@ -14,22 +14,22 @@
 		<div class="class_47" >
 			<img src=".\assets\images\C.H.O.R.png" class="class_48" >
 			<div class="class_49" >
-				<a href="#"  class="class_50" style="text-decoration: underline;">
+				<a href="index.html"  class="class_50" style="text-decoration: underline;">
 					Home
 				</a>
-				<a href="#"  class="class_50" >
+				<a href="../Map Page/index.html"  class="class_50" >
 					Map
 				</a>
-				<a href="#"  class="class_52" >
+				<a href="../CrimePredictor/index.html"  class="class_52" >
 					Crime Predictor
 				</a>
-				<a href="#"  class="class_53" >
+				<a href="../Complaint_Lodging/index.html"  class="class_53" >
 					Complaint Lodging
 				</a>
-				<a href="#"  class="class_50" >
+				<a href="../Missing_Person_Portal/index.html"  class="class_50" >
 					Missing Person
 				</a>
-				<a href="#"  class="class_50" >
+				<a href="../CHATBOT Page/index.html"  class="class_50" >
 					ChatBot
 				</a>
 			</div>
@@ -91,7 +91,7 @@
 			</h4>
 			<div class="class_25" >
 				<div class="class_26"  >
-					<a href="#" style="color: black; text-decoration: none; font-weight: bold;">View</a>
+					<a href="../CrimePredictor/index.html" style="color: black; text-decoration: none; font-weight: bold;">View</a>
 					<br >
 				</div>
 			</div>
@@ -112,7 +112,7 @@
 			</h4>
 			<div class="class_25" >
 				<div class="class_26"  >
-					<a href="#" style="color: black; text-decoration: none;font-weight: bold;">View</a>
+					<a href="../Map Page/index.html" style="color: black; text-decoration: none;font-weight: bold;">View</a>
 					<br >
 				</div>
 			</div>
@@ -133,7 +133,7 @@
 			</h4>
 			<div class="class_25" >
 				<div class="class_26"  >
-					<a href="#" style="color: black; text-decoration: none;font-weight: bold;">View</a>
+					<a href="../CHATBOT Page/index.html" style="color: black; text-decoration: none;font-weight: bold;">View</a>
 					<br >
 				</div>
 			</div>
@@ -153,7 +153,7 @@
 			</h4>
 			<div class="class_28" >
 				<div class="class_26"  >
-					<a href="#" style="color: black; text-decoration: none;font-weight: bold;">View</a>
+					<a href="../Complaint_Lodging/index.html" style="color: black; text-decoration: none;font-weight: bold;">View</a>
 					<br >
 				</div>
 			</div>
@@ -172,7 +172,7 @@
 			</h4>
 			<div class="class_25" >
 				<div class="class_26"  >
-					 <a href="#" style="color: black; text-decoration: none;font-weight: bold;">View</a>
+					 <a href="../Missing_Person_Portal/index.html" style="color: black; text-decoration: none;font-weight: bold;">View</a>
 					<br >
 				</div>
 			</div>
