--- a/FrontEnd/CHATBOT Page/index.html
+++ b/FrontEnd/CHATBOT Page/index.html
@@ -13,22 +13,22 @@
 		<div class="class_47" >
 			<img src=".\assets\images\C.H.O.R.png" class="class_48" >
 			<div class="class_49" >
-				<a href="#"  class="class_50" style="text-decoration: underline;">
+				<a href="FrontEnd\Main Page\index.html"  class="class_50" style="text-decoration: underline;">
 					Home
 				</a>
-				<a href="#"  class="class_50" >
+				<a href="FrontEnd\Map Page\index.html"  class="class_50" >
 					Map
 				</a>
-				<a href="#"  class="class_52" >
+				<a href="FrontEnd\CrimePredictor\index.html"  class="class_52" >
 					Crime Predictor
 				</a>
-				<a href="#"  class="class_53" >
+				<a href="FrontEnd\Complaint_Lodging\index.html"  class="class_53" >
 					Complaint Lodging
 				</a>
-				<a href="#"  class="class_50" >
+				<a href="FrontEnd\Missing_Person_Portal\index.html"  class="class_50" >
 					Missing Person
 				</a>
-				<a href="#"  class="class_50" >
+				<a href="FrontEnd\CHATBOT Page\index.html"  class="class_50" >
 					ChatBot
 				</a>
 			</div>
