--- a/FrontEnd/Complaint_Lodging/index.html
+++ b/FrontEnd/Complaint_Lodging/index.html
@@ -15,22 +15,22 @@
 		<div class="class_3">
 			<img src="assets/images/C.H.O.R.png" class="class_4">
 			<div class="class_5">
-				<a href="#" class="class_6">
+				<a href="FrontEnd\Main Page\index.html" class="class_6">
 					Home
 				</a>
-				<a href="#" class="class_6">
+				<a href="FrontEnd\Map Page\index.html" class="class_6">
 					Map
 				</a>
-				<a href="#" class="class_8">
+				<a href="FrontEnd\CrimePredictor\index.html" class="class_8">
 					Crime Predictor
 				</a>
-				<a href="#" class="class_9">
+				<a href="FrontEnd\Complaint_Lodging\index.html" class="class_9">
 					Complaint Lodging
 				</a>
-				<a href="#" class="class_6">
+				<a href="FrontEnd\Missing_Person_Portal\index.html" class="class_6">
 					Missing Person
 				</a>
-				<a href="#" class="class_6">
+				<a href="FrontEnd\CHATBOT Page\index.html" class="class_6">
 					ChatBot
 				</a>
 			</div>
