--- a/FrontEnd/Login page/index.html
+++ b/FrontEnd/Login page/index.html
@@ -22,7 +22,6 @@
       </section>
     </div>
     <div class="right">
-      <form>
         <section class="copy">
 
           <div class="logo">
@@ -31,7 +30,7 @@
 
           <h2>Log In</h2>
           <div class="login-container">
-            <p>Don't have an account? <a href="#">
+            <p>Don't have an account? <a href="../Registration page/index.html">
               <strong>Sign Up</strong>
             </a> </p>
           </div>
@@ -56,12 +55,11 @@
               Sign up for email updates.
             </label>
           </div>-->
-          <button class="login-btn" type="submit">Log In</button>
+          <button class="login-btn" type="button">Log In</button>
         <section class="copy legal">
           <p><span class="small">By continuing, you agree to accept our <br> Privacy Policy &amp; Terms of Service.</span></p>
         </section>
 
-      </form>
     </div>
   </div>
 
