--- a/FrontEnd/Registration page/index.html
+++ b/FrontEnd/Registration page/index.html
@@ -31,7 +31,7 @@
 
           <h2>Sign Up</h2>
           <div class="login-container">
-            <p>Already have an account? <a href="#">
+            <p>Already have an account? <a href="../Login page/index.html">
               <strong>Log In</strong>
             </a> </p>
           </div>
@@ -67,7 +67,7 @@
               Sign up for email updates.
             </label>
           </div>-->
-          <button class="signup-btn" type="submit">Sign Up</button>
+          <button class="signup-btn" type="button">Register</button>
         <section class="copy legal">
           <p><span class="small">By continuing, you agree to accept our <br> Privacy Policy &amp; Terms of Service.</span></p>
         </section>
@@ -78,7 +78,7 @@
 
 
 </body>
-<script src="Login.js"></script>
+<script src="Registration.js"></script>
 
 
 
